--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       <aside class="modal" id="config-overlay">
         <h2>Choose your Name</h2>
         <form>
-          <div class="form-control">
+          <div class="form-control " >
             <label for="playername">Player name</label>
-            <input type="text" name="playername" id="playername" />
+            <input type="text" name="playername" id="playername" required maxlength="30"/>
           </div>
+          <p id="config-errors"></p>
           <div>
-            <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
+            <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
             <button type="submit" class="btn" id="submit-config-btn">Confirm</button>
           </div>
         </form>
@@ -47,21 +48,21 @@
         <ol>
           <li>
             <!-- list item for player one -->
-            <article>
+            <article id="player1-data">
               <h2>Player 1</h2>
-              <h3 id="player1-name">PLAYER NAME</h3>
+              <h3>PLAYER NAME</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt" id="edit-player1-btn">Edit</button>
+              <button class="btn btn-alt" id="edit-player1-btn" data-playerid="1">Edit</button>
             </article>
           </li>
 
           <li>
             <!-- list item for player one -->
-            <article id="player2-name">
+            <article id="player2-data">
               <h2>Player 2</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt" id="edit-player2-btn">Edit</button>
+              <button class="btn btn-alt" id="edit-player2-btn" data-playerid="2">Edit</button>
             </article>
           </li>
         </ol>
