--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="/Scripts/config.js" defer></script>
     <script src="/Scripts/game.js" defer></script>
     <script src="/Scripts/app.js" defer></script>
-    
+
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
@@ -31,14 +31,24 @@
       <aside class="modal" id="config-overlay">
         <h2>Choose your Name</h2>
         <form>
-          <div class="form-control " >
+          <div class="form-control">
             <label for="playername">Player name</label>
-            <input type="text" name="playername" id="playername" required maxlength="30"/>
+            <input
+              type="text"
+              name="playername"
+              id="playername"
+              required
+              maxlength="30"
+            />
           </div>
           <p id="config-errors"></p>
           <div>
-            <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
-            <button type="submit" class="btn" id="submit-config-btn">Confirm</button>
+            <button type="reset" class="btn btn-alt" id="cancel-config-btn">
+              Cancel
+            </button>
+            <button type="submit" class="btn" id="submit-config-btn">
+              Confirm
+            </button>
           </div>
         </form>
       </aside>
@@ -52,7 +62,13 @@
               <h2>Player 1</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt" id="edit-player1-btn" data-playerid="1">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player1-btn"
+                data-playerid="1"
+              >
+                Edit
+              </button>
             </article>
           </li>
 
@@ -62,11 +78,17 @@
               <h2>Player 2</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt" id="edit-player2-btn" data-playerid="2">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player2-btn"
+                data-playerid="2"
+              >
+                Edit
+              </button>
             </article>
           </li>
         </ol>
-        <button class="btn">Start new Game</button>
+        <button class="btn" id="start-game-btn">Start new Game</button>
       </section>
 
       <section id="active-game">
@@ -77,17 +99,17 @@
 
         <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
         <ol id="game-board">
-          <li class="disabled">X</li>
-          <li></li>
-          <li class="disabled">O</li>
+          <li data-col="1" data-row="1"></li>
+          <li data-col="2" data-row="1"></li>
+          <li data-col="3" data-row="1"></li>
 
-          <li></li>
-          <li class="disabled">X</li>
-          <li></li>
+          <li data-col="1" data-row="2"></li>
+          <li data-col="2" data-row="2"></li>
+          <li data-col="3" data-row="2"></li>
 
-          <li class="disabled">O</li>
-          <li></li>
-          <li></li>
+          <li data-col="1" data-row="3"></li>
+          <li data-col="2" data-row="3"></li>
+          <li data-col="3" data-row="3"></li>
         </ol>
       </section>
     </main>
