--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link type="text/css" rel="stylesheet" href="styles/configuration.css" />
     <link type="text/css" rel="stylesheet" href="styles/game.css" />
 
-    <script src="/Scripts/config.js" defer></script>
-    <script src="/Scripts/game.js" defer></script>
-    <script src="/Scripts/app.js" defer></script>
+    <script type="text/javascript" src="/Scripts/config.js" defer></script>
+    <script type="text/javascript" src="/Scripts/game.js" defer></script>
+    <script type="text/javascript" src="/Scripts/app.js" defer></script>
 
     <title>Tic-Tac-Toe</title>
   </head>
