--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       rel="stylesheet"
     />
 
-    <link  rel="stylesheet" href="/styles/styles.css" />
-    <link  rel="stylesheet" href="/styles/overlays.css" />
-    <link  rel="stylesheet" href="/styles/configuration.css" />
-    <link  rel="stylesheet" href="/styles/game.css" />
+    <link  rel="stylesheet" href="./styles/styles.css" />
+    <link  rel="stylesheet" href="./styles/overlays.css" />
+    <link  rel="stylesheet" href="./styles/configuration.css" />
+    <link  rel="stylesheet" href="./styles/game.css" />
 
-    <script  src="/Scripts/config.js" defer></script>
-    <script  src="/Scripts/game.js" defer></script>
-    <script  src="/Scripts/app.js" defer></script>
+    <script  src="./Scripts/config.js" defer></script>
+    <script  src="./Scripts/game.js" defer></script>
+    <script  src="./Scripts/app.js" defer></script>
 
     <title>Tic-Tac-Toe</title>
   </head>
